First stepss in reservation service